...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/backToQMButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="@dimen/fab_margin"
                android:clickable="true"
                android:contentDescription="@string/back_to_qm"
...
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:contentDescription="@string/tag_for_question"
                android:ems="10" />

            <Button
                android:id="@+id/addTagButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/purple_500"
                android:ems="10"
                android:text="Add tag"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
...
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.75"
                android:text="Question Title:" />

            <EditText
                android:id="@+id/editTextQuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/question_title"
...
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 1:" />

            <EditText
                android:id="@+id/editTextAnswer1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="Answer 1"
...
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 2:" />

            <EditText
                android:id="@+id/editTextAnswer2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="Answer 2"
...
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 3:" />

            <EditText
                android:id="@+id/editTextAnswer3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="Answer 3"
...
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 4:" />

            <EditText
                android:id="@+id/editTextAnswer4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="Answer 4"
...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@color/purple_500"
...
