...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/question_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
...
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Choose to show questions for tag: " />

        <Spinner
            android:id="@+id/tagChooserSpinner"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
...
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="Helper button"
            android:src="@drawable/ic_launcher_foreground" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/qmEditTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="Edit tag button"
            android:src="@drawable/ic_baseline_edit_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/qmDeleteTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="Delete tag button"
            android:src="@drawable/ic_baseline_delete_forever_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="Add question"
            android:src="@drawable/ic_baseline_add_circle_outline_24" />
    </LinearLayout>
</LinearLayout>
