...
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_question_manager">Question Manager</string>
    <string name="question_manager">Question Manager</string>
    <string name="correct_answer_id">Correct Answer ID</string>
    <string name="tag_id">Tag ID</string>
    <string name="back_to_qm">Back to question manager</string>
    <string name="submit_button">Submit Button</string>
    <string name="question_title">Question Title</string>
    <string name="tag_for_question">Tag For Question</string>
    <string name="quiz_categories">Quiz Categories</string>
    <string name="play_quiz">Play Quiz</string>
    <string-array name="correct_answer_options">
        <item>1</item>
...
